--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "jsqr": "^1.4.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.562.0",
     "ogl": "^1.0.11",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
