--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "firebase": "^12.7.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "jsqr": "^1.4.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.562.0",
