--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.4.2",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "cloudinary": "^2.8.0",
     "firebase": "^12.7.0",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
